<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="name">Name</string>
    <string name="phone">1122334455</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="job">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="show">SHOW ADDITIONAL FIELDS</string>
    <string name="hide">HIDE ADDITIONAL FIELDS</string>
    <string name="phone_error">Invalid phone format</string>
</resources>
